2009-11-27  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* uielement.cpp: SetIsAttached: check the surface for null before using
	it, we may end up here during shutdown, in which case there is no
	surface anymore.

2009-11-27  Alan McGovern  <amcgovern@novell.com>

	* frameworkelement.cpp: Fix an issue where if we found no
	  dirty elements while searching the DIRTY_MEASURE_HINT path,
	  we could exit early (without doing an Arrange or Size path).

2009-11-27  Alan McGovern  <amcgovern@novell.com>

	* uielement.cpp: If an item which has a value set for
	  LastRenderSize is added to the tree, ensure that the dirty
	  size hint is propagated up the tree.

2009-11-27  Alan McGovern  <amcgovern@novell.com>

	* frameworkelement.cpp: Add a default handler to the switch to
	  silence compiler warnings.

2009-11-27  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* xaml.cpp:
	* dirty.cpp:
	* media.cpp:
	* panel.cpp:
	* shape.cpp:
	* canvas.cpp:
	* stylus.cpp:
	* control.cpp:
	* runtime.cpp:
	* popup.cpp|h:
	* glyphs.cpp|h:
	* pipeline.cpp:
	* template.cpp:
	* eventargs.cpp:
	* textbox.cpp|h:
	* textblock.cpp:
	* downloader.cpp:
	* resources.cpp|h:
	* uielement.cpp|h:
	* collection.cpp|h:
	* mediaplayer.cpp|h:
	* mediaelement.cpp|h:
	* mms-downloader.cpp:
	* frameworkelement.cpp:
	* dependencyobject.cpp|h: Remove the surface field and the SetSurface
	method from EventObject. Add (Set)IsAttached, which replaces the earlier
	"is attached" logic of having a surface set. Update all usages. When
	we really wanted to get the surface, we now need to get it from the
	deployment instead.

	* cbinding.cpp|h: Regenerated.

2009-11-27  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* dependencyobject.h: Remove unneeded cbinding/pinvoke.

	* deployment.cpp|h: Make Surface a normal property so that we can make
	it thread safe.

	* runtime.cpp|h: Added GetTimeManagerReffed (thread-safe), and make
	necessary changes to make it thread safe too.

	* dependencyproperty.g.cpp: Regenerated.
