@@ -1,3 +1,8 @@
+2009-11-27  Alan McGovern  <amcgovern@novell.com>
+
+	* uielement.cpp: Remove the fast path to avoid walking up the
+	  tree if the hint flag is already set as it breaks drt 549.
+
 2009-11-27  Rolf Bjarne Kvinge  <RKvinge@novell.com>
 
 	* uielement.cpp: SetIsAttached: check the surface for null before using
